fix insert allocs
Signed-off-by: dchigarev <dmitry.chigarev@intel.com>

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -24,7 +24,11 @@ add_mlir_library(IMEXTransforms
   MLIRSupport
   MLIRTransformUtils
   MLIRVectorTransforms
+  IMEXXeTileDialect
+  IMEXRegionDialect
 
   DEPENDS
   IMEXTransformsPassIncGen
+  IMEXXeTilePassIncGen
+  MLIRRegionOpsIncGen
 )
