--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -27,7 +27,11 @@ add_mlir_library(IMEXTransforms
   MLIRSupport
   MLIRTransformUtils
   MLIRVectorTransforms
+  IMEXXeTileDialect
+  IMEXRegionDialect
 
   DEPENDS
   IMEXTransformsPassIncGen
+  IMEXXeTilePassIncGen
+  MLIRRegionOpsIncGen
 )
